<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_secondary_light"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/onboardingViewPager"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/view_page_bg"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loginbackground" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineImageTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.1"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="347dp"
            android:layout_height="165dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineImageBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineImageTop"
            app:srcCompat="@drawable/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineImageBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Selamat_Datang_di_FoodLergic"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineImageBottom"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboardingViewPager"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/white"
                android:hint="       Password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:gravity="center"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingHorizontal="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
            android:backgroundTint="@color/color_button"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun_RegisterNow"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/tvRegisterNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="100"
            android:text="@string/RegisterNow"
            android:textColor="@color/color_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <TextView
            android:id="@+id/tvTryAsGuest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="100"
            android:text="@string/TryAsGuest"
            android:textColor="@color/color_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterNow"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterNow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
